Changes 10/04/2018 Get Location Value

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
 
     <Switch
         android:id="@+id/locationControl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="460dp"
+        android:layout_height="25dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -32,8 +32,8 @@
         android:hint="@string/cityHint"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/temp"
-        app:layout_constraintEnd_toStartOf="@+id/locationControl"
-        app:layout_constraintHorizontal_bias="0.121"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/locationControl"
         app:layout_constraintVertical_bias="0.0" />
